--- a/index.html
+++ b/index.html
@@ -16,53 +16,51 @@
 </head>
 <body>
     <h1>Flappy Bird</h1>
-    <canvas id="gameCanvas" width="400" height="500"></canvas>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script>
         const canvas = document.getElementById("gameCanvas");
         const ctx = canvas.getContext("2d");
 
-        let bird = { x: 50, y: 250, radius: 15, velocity: 0, gravity: 0.5 };
+        let bird = { x: 100, y: 300, radius: 20, velocity: 0, gravity: 0.6 };
         let pipes = [];
         let score = 0;
         let isGameOver = false;
 
-        // Event listener for bird jump
+        // Bird jump on key press
         document.addEventListener("keydown", () => {
             if (!isGameOver) {
-                bird.velocity = -8;
+                bird.velocity = -10;
             }
         });
 
         function createPipe() {
-            let gap = 120;
+            let gap = 150;
             let topHeight = Math.random() * (canvas.height / 2);
             let bottomHeight = canvas.height - (topHeight + gap);
-            pipes.push({ x: canvas.width, topHeight, bottomHeight, width: 50 });
+            pipes.push({ x: canvas.width, topHeight, bottomHeight, width: 80 });
         }
 
         function update() {
             if (isGameOver) return;
 
-            // Update bird position
+            // Bird movement
             bird.velocity += bird.gravity;
             bird.y += bird.velocity;
 
-            // Check if bird hits the ground or top
+            // Collision with top/bottom
             if (bird.y + bird.radius > canvas.height || bird.y - bird.radius < 0) {
                 isGameOver = true;
             }
 
-            // Move pipes & check for collision
+            // Move pipes & check collisions
             for (let i = 0; i < pipes.length; i++) {
-                pipes[i].x -= 3;
+                pipes[i].x -= 4;
 
-                // Remove pipes after passing
                 if (pipes[i].x + pipes[i].width < 0) {
                     pipes.splice(i, 1);
                     score++;
                 }
 
-                // Collision detection
                 if (
                     bird.x + bird.radius > pipes[i].x &&
                     bird.x - bird.radius < pipes[i].x + pipes[i].width &&
@@ -91,13 +89,13 @@
 
             // Display Score
             ctx.fillStyle = "black";
-            ctx.font = "20px Arial";
-            ctx.fillText("Score: " + score, 10, 20);
+            ctx.font = "30px Arial";
+            ctx.fillText("Score: " + score, 20, 40);
 
-            // Game Over Message with your name
+            // Game Over Message
             if (isGameOver) {
-                ctx.fillText("Game Over!", canvas.width / 2 - 40, canvas.height / 2);
-                ctx.fillText("Created by: Giriraj Pareek", canvas.width / 2 - 80, canvas.height / 2 + 30);
+                ctx.fillText("Game Over!", canvas.width / 2 - 80, canvas.height / 2);
+                ctx.fillText("Created by: Giriraj Pareek", canvas.width / 2 - 140, canvas.height / 2 + 40);
             }
         }
 
