--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
         const canvas = document.getElementById("gameCanvas");
         const ctx = canvas.getContext("2d");
 
-        let bird = { x: 100, y: 300, radius: 20, velocity: 0, gravity: 0.6 };
+        let bird = { x: 150, y: 300, radius: 20, velocity: 0, gravity: 0.6, lift: -12 };
         let pipes = [];
         let score = 0;
         let isGameOver = false;
 
-        // Bird jump on key press
-        document.addEventListener("keydown", () => {
-            if (!isGameOver) {
-                bird.velocity = -10;
+        // Bird jumps when key is pressed
+        document.addEventListener("keydown", (event) => {
+            if (event.code === "Space" && !isGameOver) {
+                bird.velocity = bird.lift; // Jump effect
             }
         });
 
         function createPipe() {
-            let gap = 150;
+            let gap = 180;
             let topHeight = Math.random() * (canvas.height / 2);
             let bottomHeight = canvas.height - (topHeight + gap);
             pipes.push({ x: canvas.width, topHeight, bottomHeight, width: 80 });
@@ -43,12 +43,17 @@
         function update() {
             if (isGameOver) return;
 
-            // Bird movement
+            // Bird gravity effect
             bird.velocity += bird.gravity;
             bird.y += bird.velocity;
 
-            // Collision with top/bottom
-            if (bird.y + bird.radius > canvas.height || bird.y - bird.radius < 0) {
+            // Prevent bird from going out of bounds
+            if (bird.y + bird.radius >= canvas.height) {
+                bird.y = canvas.height - bird.radius;
+                isGameOver = true;
+            }
+            if (bird.y - bird.radius <= 0) {
+                bird.y = bird.radius;
                 isGameOver = true;
             }
 
@@ -96,6 +101,7 @@
             if (isGameOver) {
                 ctx.fillText("Game Over!", canvas.width / 2 - 80, canvas.height / 2);
                 ctx.fillText("Created by: Giriraj Pareek", canvas.width / 2 - 140, canvas.height / 2 + 40);
+                ctx.fillText("Press F5 to Restart", canvas.width / 2 - 120, canvas.height / 2 + 80);
             }
         }
 
