--- a/index.html
+++ b/index.html
@@ -21,15 +21,31 @@
         const canvas = document.getElementById("gameCanvas");
         const ctx = canvas.getContext("2d");
 
-        let bird = { x: 150, y: 300, radius: 20, velocity: 0, gravity: 0.6, lift: -12 };
-        let pipes = [];
-        let score = 0;
-        let isGameOver = false;
+        let bird, pipes, score, isGameOver;
+        let gravity = 0.6, lift = -12;
 
-        // Bird jumps when key is pressed
+        function resetGame() {
+            bird = { x: 150, y: 300, radius: 20, velocity: 0 };
+            pipes = [];
+            score = 0;
+            isGameOver = false;
+        }
+
+        resetGame(); // Initialize game on load
+
+        // Bird jumps when Spacebar or screen tap
         document.addEventListener("keydown", (event) => {
             if (event.code === "Space" && !isGameOver) {
-                bird.velocity = bird.lift; // Jump effect
+                bird.velocity = lift;
+            }
+        });
+
+        canvas.addEventListener("click", () => {
+            if (isGameOver) {
+                resetGame(); // Restart game if it's over
+                gameLoop(); 
+            } else {
+                bird.velocity = lift; // Make the bird jump
             }
         });
 
@@ -44,16 +60,11 @@
             if (isGameOver) return;
 
             // Bird gravity effect
-            bird.velocity += bird.gravity;
+            bird.velocity += gravity;
             bird.y += bird.velocity;
 
             // Prevent bird from going out of bounds
-            if (bird.y + bird.radius >= canvas.height) {
-                bird.y = canvas.height - bird.radius;
-                isGameOver = true;
-            }
-            if (bird.y - bird.radius <= 0) {
-                bird.y = bird.radius;
+            if (bird.y + bird.radius >= canvas.height || bird.y - bird.radius <= 0) {
                 isGameOver = true;
             }
 
@@ -100,8 +111,8 @@
             // Game Over Message
             if (isGameOver) {
                 ctx.fillText("Game Over!", canvas.width / 2 - 80, canvas.height / 2);
-                ctx.fillText("Created by: Giriraj Pareek", canvas.width / 2 - 140, canvas.height / 2 + 40);
-                ctx.fillText("Press F5 to Restart", canvas.width / 2 - 120, canvas.height / 2 + 80);
+                ctx.fillText("Tap to Restart", canvas.width / 2 - 100, canvas.height / 2 + 40);
+                ctx.fillText("Created by: Giriraj Pareek", canvas.width / 2 - 140, canvas.height / 2 + 80);
             }
         }
 
