--- a/index.html
+++ b/index.html
@@ -12,21 +12,60 @@
         }
         canvas {
             background-color: skyblue;
-            display: block;
+            display: none;
             margin: auto;
+        }
+        #startScreen {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        #playerName {
+            padding: 10px;
+            font-size: 16px;
+        }
+        #playButton {
+            margin-top: 10px;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <h1>Flappy Bird</h1>
-    <canvas id="gameCanvas" width="800" height="500"></canvas>
+    <div id="startScreen">
+        <h1>Flappy Bird</h1>
+        <input type="text" id="playerName" placeholder="Enter your name" />
+        <button id="playButton">Play</button>
+    </div>
     
+    <canvas id="gameCanvas" width="800" height="500"></canvas>
+
     <script>
+        const startScreen = document.getElementById("startScreen");
+        const playButton = document.getElementById("playButton");
+        const playerNameInput = document.getElementById("playerName");
         const canvas = document.getElementById("gameCanvas");
         const ctx = canvas.getContext("2d");
 
+        let playersList = [];
         let bird, pipes, score, isGameOver;
         let gravity = 0.4, lift = -8, pipeSpeed = 3;
+        let playerName = "";
+
+        playButton.addEventListener("click", () => {
+            playerName = playerNameInput.value.trim();
+            if (playerName === "") {
+                alert("Please enter your name to play.");
+                return;
+            }
+            playersList.push(playerName);
+            startScreen.style.display = "none";
+            canvas.style.display = "block";
+            resetGame();
+        });
 
         function resetGame() {
             bird = { x: 150, y: 250, radius: 20, velocity: 0 };
@@ -36,22 +75,12 @@
             gameLoop();
         }
 
-        resetGame(); // Start game
-
-        // Prevent zoom-in on tap
-        document.addEventListener("touchstart", (event) => {
-            event.preventDefault();
-            handleJump();
-        }, { passive: false });
-
-        // Make bird jump on spacebar
         document.addEventListener("keydown", (event) => {
             if (event.code === "Space" && !isGameOver) {
                 bird.velocity = lift;
             }
         });
 
-        // Handle screen tap
         function handleJump() {
             if (isGameOver) {
                 resetGame();
@@ -114,12 +143,12 @@
 
             ctx.fillStyle = "black";
             ctx.font = "20px Arial";
-            ctx.fillText("Score: " + score, 10, 20);
+            ctx.fillText("Player: " + playerName, 10, 20);
+            ctx.fillText("Score: " + score, 10, 40);
             
             if (isGameOver) {
                 ctx.font = "30px Arial";
                 ctx.fillText("Game Over!", canvas.width / 2 - 80, canvas.height / 2 - 20);
-                ctx.fillText("Created by: Giriraj Pareek", canvas.width / 2 - 130, canvas.height / 2 + 20);
                 ctx.fillText("Tap to Restart", canvas.width / 2 - 100, canvas.height / 2 + 60);
             }
         }
@@ -133,7 +162,6 @@
         }
 
         setInterval(createPipe, 2000);
-        gameLoop();
     </script>
 </body>
 </html>
