--- a/index.html
+++ b/index.html
@@ -73,3 +73,22 @@
     </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ludo Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <h1>Ludo Game</h1>
+    <div class="board" id="ludoBoard"></div>
+
+    <button onclick="rollDice()">🎲 Roll the Dice</button>
+    <p id="diceResult">🎲 Roll to start</p>
+
+    <script src="script.js"></script>
+</body>
+</html>
